fix nav mobile side bar height overlap

--- a/frontview/src/components/nav/nav.css
+++ b/frontview/src/components/nav/nav.css
@@ -105,8 +105,12 @@
     width: 100%;
     background-color: var(--shade-gray2);
     height: calc(100% - 67px);
-    top: 67px;
+    top: 1px;
+    /* z-index: 10000; */
     position: absolute;
+  }
+  .thusa {
+    z-index: 10;
   }
   .nav_mobile_ul {
     right: 0;
@@ -161,7 +165,3 @@
     font-weight: 500;
   }
 }
-
-
-
-
