--- a/frontview/src/components/smnav/smnav.css
+++ b/frontview/src/components/smnav/smnav.css
@@ -4,7 +4,8 @@
   background-position: 50% 50%;
   background-size: cover;
   width: 100%;
-  position: relative;
+  position: sticky;
+  top: 0;
   display: flex;
   align-items: center;
   justify-content: center;
